# racefree-filelock

./: .gitignore  LICENSE  README.md  pyproject.toml
src/racefree_filelock/: __init__.py  lock.py
tests/: test_lock.py
