[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "racefree-filelock"
version = "0.1.0"
description = "Atomic cross-process file lock with safe stale-holder takeover. ~80 LOC, no dependencies."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "aiton08255", email = "ait.on.08255@gmail.com" }]
keywords = ["filelock", "lock", "singleton", "concurrency", "race-condition", "atomic"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/aiton08255/racefree-filelock"
Source = "https://github.com/aiton08255/racefree-filelock"
Issues = "https://github.com/aiton08255/racefree-filelock/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]
psutil = ["psutil>=5.9"]

[tool.hatch.build.targets.wheel]
packages = ["src/racefree_filelock"]
